# soccerxcomm

./: CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  build.yml
.github/workflows/: build.yml  publish.yml
docs/: README.md  _sidebar.md  client.md  client_info.md  game_info.md  game_stage_kind.md  http_client.md  http_server.md  index.html  index.md  message.md  network_client.md  network_client_interface.md  network_server.md  network_server_interface.md  protocols.md  robot_control.md  robot_status.md  server.md  team_score.md
docs/protocols/: README.md
docs/protocols/control/: get_team_info_client.json  login_client.json
docs/protocols/schemas/: get_game_info_client.json  get_game_info_server.json  get_team_info_server.json  push_sensor_data_server.json
examples/client/: run.py
examples/demo/: run_client.py  run_server.py
examples/http/: client.py  run_client.py  run_server.py  server.py
examples/http_communication/: client.py  server.py
examples/network_http/: run_client.py  run_server.py
examples/server/: run.py
protocols/schemas/: call_service_client.json  call_service_server.json  get_game_info_server.json  get_robot_info_client.json  get_robot_info_server.json  get_service_client.json  get_service_server.json  push_captured_image_server.json  push_general_data.json  push_robot_control_client.json  push_robot_status_server.json  push_score_server.json  push_topic_message.json
src/moshumanoid/sdk/: __init__.py  client.py  (+8 more)
src/soccerxcomm/: __init__.py  client.py  client_info.py  game_info.py  game_stage_kind.py  http_client.py  http_server.py  logger.py  message.py  network_server_interface.py  robot_control.py  robot_status.py  server.py  team_score.py
