[tool.poetry]
name = "moshumanoid.sdk"
version = "0.0.1"
description = "A Python library for communication with MosHumanoid clients and servers"
authors = ["Zijian Zhang <futrime@outlook.com>"]
readme = "README.md"
packages = [
    {include = "moshumanoid", from="src" }
]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.17.3"
termcolor = "^2.3.0"
aiohttp = "^3.8.4"
pymongo = "^4.3.3"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
